ipc/ipdl/test/ipdl/ok/maybe_OfActorsSub.ipdl
include protocol maybe_OfActors;

protocol maybe_OfActorsSub {
    manager maybe_OfActors;

child: async __delete__();
};
