ipc/ipdl/test/ipdl/error/ManageeForgot.ipdl
include protocol ForgottenManager;

// See ForgottenManager. This includes ForgottenManager to ensure that
// loading this file fails.

protocol ManageeForgot {
child:
    async __delete__();
};
